--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,15 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - images/
-   - assets/fonts
+    - images/
+    - assets/fonts
+
+
+
+  fonts:
+     - family: Roboto
+       fonts:
+         - asset: C:\Users\userm\StudioProjects\whatinif\assets\fonts\Inter-Black.ttf
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -61,12 +68,7 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  #
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
