--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
 
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -47,6 +48,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - fonts:
+        - family: Inter
+          fonts:
+            - asset: C:/Users/userm/StudioProjects/whatinif/assets/fonts/Inter-Thin.ttf
+              style: italic
+
+
 
 
 
@@ -61,7 +69,8 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  #
+
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
