--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  image_picker: ^0.8.5
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -48,14 +49,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
-    - fonts:
-        - family: Inter
-          fonts:
-            - asset: C:/Users/userm/StudioProjects/whatinif/assets/fonts/Inter-Thin.ttf
-              style: italic
-
-
-
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
