criando widget de botão proseguir e itens de arquivo

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -22,6 +22,8 @@ dependencies:
   mask_text_input_formatter: ^2.3.0
   http: ^0.13.5
   image_picker: ^0.8.3
+
+  font_awesome_flutter: ^8.8.1
 
 dev_dependencies:
   flutter_test:
