--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,13 @@ dependencies:
   image_picker: ^0.8.3
 
   font_awesome_flutter: ^8.8.1
+  file_picker: ^5.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   image_picker: ^0.8.5
+  file_picker: ^5.0.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
