--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\Users\lbrit\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\lbrit\Projetos\Ifal\PMob\whatinif
+FLUTTER_ROOT=C:\flutter\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\Leonardo Brito\Projetos\inova
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
