INOVA-5: resolvendo conflitos

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=/Users/emanuelvsz/Library/Android/sdk
-flutter.sdk=/Users/emanuelvsz/Downloads/flutter
+sdk.dir=C:\\Users\\eduar\\AppData\\Local\\Android\\sdk
+flutter.sdk=E:\\utils\\sdk\\flutter
