--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,8 +1,8 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/home/aluno/Documentos/flutter
-FLUTTER_APPLICATION_PATH=/home/aluno/Área de Trabalho/inova/inova
+FLUTTER_ROOT=E:\utils\sdk\flutter
+FLUTTER_APPLICATION_PATH=E:\projects\inova
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=lib/main.dart
+FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
