--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   mask_text_input_formatter: ^2.3.0
   http: ^0.13.5
   image_picker: ^0.8.3
+  file_picker: ^5.2.2
 
   font_awesome_flutter: ^8.8.1
 
