--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=/Users/emanuelvsz/Library/Android/sdk
-flutter.sdk=/Users/emanuelvsz/Downloads/flutter
+sdk.dir=C:\\Users\\Leonardo Brito\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\flutter\\flutter
