INOVA-5 creating vagarepo

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   uuid: ^3.0.7
   sqflite: ^2.2.0+3
   path_provider: ^2.0.11
+  either_dart: ^0.3.0
 
 dev_dependencies:
   flutter_test:
