--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
-sdk.dir=C:\\Android\\android-sdk
+sdk.dir=C:/Android/android-sdk
 flutter.sdk=C:\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
