--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,22 +36,41 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  # Dart data class
   equatable: ^2.0.5
+  json_serializable: ^4.1.3
+  freezed_annotation: ^0.14.2
+  functional_enum_annotation: ^1.2.1
+
+  # Dependecy injection
+  get_it: ^7.1.3
+  injectable: ^1.0.4
+
+  # State Manager
   flutter_bloc: ^8.1.1
-  mask_text_input_formatter: ^2.4.0
-  http: ^0.13.5
-  image_picker: ^0.8.6
-  file_picker: ^5.2.3
   bloc: ^8.1.0
+
+  # Network 
+  http: ^0.13.5
+
+  # Database
   uuid: ^3.0.7
   sqflite: ^2.2.0+3
   path_provider: ^2.0.11
+
+  # Utils
+  mask_text_input_formatter: ^2.4.0
+  image_picker: ^0.8.6
+  file_picker: ^5.2.3
+
   either_dart: ^0.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  freezed: ^0.14.2
+  
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
